=== 0.4 ===
2011-07-19  Aki Sasaki  <aki@mozilla.com>
* TODO: Removed file

* mozharness/base/script.py (query_abs_dirs):
    put upload_dir in work_dir/
    keep logs under base_work_dir/
    TODO: copy_to_upload_dir with file rotation, copy logs there
    This will let me clobber work_dir without blowing away logs

2011-07-18  Aki Sasaki  <aki@mozilla.com>
* mozharness/scripts/mozmill_updates.py:
    Added --create-virtualenv action. Not sure if this is useful or needed, but I was asked why I didn't, so here it is.
    Added error checking + report.json parsing.

* mozharness/base/script.py (run):
    Exit self.return_code. Initialize in __init__.

* mozharness/base/script.py (new_log_obj):
    Change default log_name from 'test' to 'log'

2011-07-15  Aki Sasaki  <aki@mozilla.com>
* mozharness/scripts/mozmill_updates.py:
    Added file.

* mozharness/base/config.py (_create_config_parser):
    Set default work_dir to 'build' instead of 'work_dir'

* mozharness/base/script.py (query_abs_dirs):
    Set default upload_dir to 'upload' instead of 'upload_dir'

2011-07-12  Aki Sasaki  <aki@mozilla.com>
* mozharness/base/config.py (parse_config_file):
    Explicitly close fh when using .json config files

* mozharness/base/vcs/mercurial.py (MercurialMixin): removed

* mozharness/base/vcs/mercurial.py (MercurialScript): removed

* mozharness/base/vcs/vcsbase.py (VCSMixin):
    Created to use MercurialVCS (or any other VCS object).
    
* mozharness/base/vcs/vcsbase.py (VCSScript):
    Quick'n'dirty wrapper around VCSScript + BaseScript.

* mozharness/base/vcs/vcsbase.py (MercurialScript):
    Quick'n'dirty wrapper around VCSScript, with self.default_vcs = 'hg'

* mozharness/l10n/multi_locale_build.py (MultiLocaleBuild):
    s,scm_checkout_repos,vcs_checkout_repos.
    Pointed to the new vcsbase.MercurialScript

* scripts/signdebs.py (MaemoDebSigner.create_repos):
    s,scm_checkout_repos,vcs_checkout_repos.
    Pointed to the new vcsbase.MercurialScript
